# parafoil_simulator

./: .gitignore  constants.cpp  forces.cpp  forces.h  joint.cpp  main  parafoil_simulator.cpp  plotter.cpp  tools.cpp  tools.h
6DOF/: constants.cpp  forces.cpp  parafoil_simulator.cpp  plotter.cpp  plotter.h
6DOF/include/: constants.h
6DOF/src/: constants.cpp  plotter.cpp  tools.cpp
6DOF_simplified/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  constants.h  data.json  forces.cpp  parafoil_simulator.cpp  plotter.h  post_process.py  tools.cpp
6DOF_simplified/include/: constants.h  forces.h  parafoil.h  pid.h  tools.h  wind_estimation.h
6DOF_simplified/src/: constants.cpp  forces.cpp  parafoil.cpp  pid.cpp  tools.cpp  wind_estimation.cpp
9DOF/: 9dof_simulator.cpp  CMakeLists.txt  constants.h  forces.cpp  joint.h  parafoil_simulator.cpp  plotter.cpp  tools.h
9DOF/include/: constants.h  tools.h
9DOF/src/: constants.cpp  forces.cpp
